Use a static site generator to split out HTML

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,8 @@
 
 @import 'modules/masthead.css';
 @import 'modules/hero.css';
+@import 'modules/article.css';
+@import 'modules/header.css';
 @import 'modules/explainer.css';
 @import 'modules/newsletter.css';
 @import 'modules/credits.css';
