--- a/partials/email_subscribe.html
+++ b/partials/email_subscribe.html
@@ -1,4 +1,4 @@
-<section class="newsletter section row">
+<section class="newsletter section section-padding section-seperator-above row">
   <div class="row-item newsletter-cta">
     <h2 class="newsletter-primary">Stay up-to-date with our kits and workshops</h2>
     <p class="newsletter-secondary">And get a free "IoT for Developers" ebook</p>
