--- a/css/modules/demo-workshop.css
+++ b/css/modules/demo-workshop.css
@@ -1,3 +1,23 @@
 .demo-workshop-content {
-  /*margin-left: 250px;*/
+  margin-right: 354px;
+}
+
+.demo-workshop-content img {
+  /*text-align: center;*/
+}
+
+.demo-workshop-cta {
+
+}
+
+.demo-workshop-cta code {
+  display: block;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  background: var(--primary-color);
+  border: 1px solid #ddd;
+}
+
+.demo-workshop-cta code .module {
+  font-weight: bold;
 }
