--- a/static/site.css
+++ b/static/site.css
@@ -519,8 +519,14 @@ html {
   overflow: auto;
 }
 
-.section-seperator {
-  border-bottom: 2px solid rgba(74, 74, 74, 0.2);
+.section.section-padding {
+  margin: 0 2rem 0 2rem;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+
+.section-seperator-above {
+  border-top: 2px solid rgba(74, 74, 74, 0.2);
 }
 /*.menu {
   list-style: none;
@@ -651,7 +657,7 @@ html {
   font-size: 40px;
 }
 article {
-  padding: 0 1rem;
+  padding: 0 2rem;
 }
 .header {
   padding-top: 60px;
@@ -715,8 +721,7 @@ article {
   max-height: 60px;
 }
 .newsletter {
-  margin: 1rem 2rem 0 2rem;
-  padding-bottom: 1rem;
+
 }
 
 .newsletter-cta {
@@ -766,5 +771,25 @@ article {
   text-align: right;
 }
 .demo-workshop-content {
-  /*margin-left: 250px;*/
+  margin-right: 354px;
+}
+
+.demo-workshop-content img {
+  /*text-align: center;*/
+}
+
+.demo-workshop-cta {
+
+}
+
+.demo-workshop-cta code {
+  display: block;
+  padding: 1rem;
+  margin: 0.5rem 0;
+  background: rgba(255,241,118,1);
+  border: 1px solid #ddd;
+}
+
+.demo-workshop-cta code .module {
+  font-weight: bold;
 }
