--- a/partials/email_subscribe.html
+++ b/partials/email_subscribe.html
@@ -1,7 +1,7 @@
 <section class="newsletter section section-padding section-seperator-above row">
   <div class="row-item newsletter-cta">
-    <h2 class="newsletter-primary">Stay up-to-date with our kits and workshops</h2>
-    <p class="newsletter-secondary">And get a free "IoT for Developers" ebook</p>
+    <h2 class="section-primary">Stay up-to-date with our kits and workshops</h2>
+    <p class="section-secondary">And get a free "IoT for Developers" ebook</p>
   </div>
   <div class="row-item newsletter-action">
     <!-- Begin MailChimp Signup Form -->
