--- a/css/variables.css
+++ b/css/variables.css
@@ -5,4 +5,5 @@
   --primary-active-color: rgba(250,232,72,1);
   --background-color: rgba(255, 255, 255, 1);
   --text-color: rgba(74, 74, 74, 1);
+  --text-color-secondary: rgba(54, 54, 54, 1);
 }
