Remove background graphic

--- a/css/base.css
+++ b/css/base.css
@@ -6,7 +6,7 @@ body {
   margin: 0;
   padding: 0;
 
-  background: var(--background-color) url(images/background-graphic.svg) no-repeat;
+  background: var(--background-color);
 }
 
 h1, h2, h3, h4, h5, h6 {
