--- a/static/site.css
+++ b/static/site.css
@@ -432,7 +432,7 @@ body {
   margin: 0;
   padding: 0;
 
-  background: rgba(255, 255, 255, 1) url(images/background-graphic.svg) no-repeat;
+  background: rgba(255, 255, 255, 1);
 }
 
 h1, h2, h3, h4, h5, h6 {
