--- a/partials/hero.html
+++ b/partials/hero.html
@@ -1,3 +1,3 @@
 <section class="section hero row">
-  <h1 class="section-item hero-hd row-item">Learn full-stack IoT by building cardboard versions of your favourite connected products</h1>
+  <h1 class="section-item hero-hd row-item">Learn & Make Smart Things out of cardboard</h1>
 </section>
