--- a/templates/index.html
+++ b/templates/index.html
@@ -10,14 +10,6 @@
       </div>
       <ul class="social section-item menu row-item row">
         <li class="menu-item social-item row-item">
-          <a href="http://github.com/cardboardiot">
-            <i class="icon-github">
-              <img src="/images/icon-github.svg" />
-              <span class="visually-hidden">Github</span>
-            </i>
-          </a>
-        </li>
-        <li class="menu-item social-item row-item">
           <a href="http://twitter.com/cardboardiot">
             <i class="icon-twitter">
               <img src="/images/icon-twitter.svg" />
@@ -44,6 +36,7 @@
     <aside class="credits section">
       <h2>Icons by the <a href="">Noun Project</a></h2>
       <ul>
+        <li><a href="https://thenounproject.com/term/high-five/102498/">high five by Justin Alexander</a></li>
         <li><a href="https://thenounproject.com/term/led-bulb/166623/">Led Bulb By DANT, IT</a></li>
         <li><a href="https://thenounproject.com/term/cut/130881/">Cut By Aaron K. Kim, US</a></li>
         <li><a href="https://thenounproject.com/term/arduino/34403/">Arduino By uizin, IT</a></li>
