--- a/css/atoms/action.css
+++ b/css/atoms/action.css
@@ -13,10 +13,11 @@
 
 .action-primary {
   border: var(--text-color);
-  color: var(--text-color);
-  background-color: var(--primary-color);
+  color: var(--primary-color);
+  background-color: var(--text-color);
 }
 
 .action-primary:hover {
-  background-color: var(--primary-active-color);
+  background-color: var(--text-color-secondary);
+  color: var(--primary-active-color);
 }
