--- a/css/atoms/section.css
+++ b/css/atoms/section.css
@@ -19,7 +19,11 @@
 }
 
 .section-seperator-above {
-  border-top: 2px solid rgba(74, 74, 74, 0.2);
+  border-top: 1px solid rgba(74, 74, 74, 0.2);
+}
+
+.section-seperator-above-dark {
+  border-top: 1px solid rgba(74, 74, 74, 0.6);
 }
 
 .section-primary,
