--- a/css/modules/explainer.css
+++ b/css/modules/explainer.css
@@ -24,5 +24,9 @@
 
 .explainer-item .image {
   margin-bottom: 20px;
-  max-height: 60px;
+  min-height: 143px;
+}
+
+.explainer-item .image img {
+  width: 100%;
 }
