--- a/css/modules/masthead.css
+++ b/css/modules/masthead.css
@@ -22,9 +22,13 @@
 .masthead .logo {
   margin-left: 2rem;
   padding-left: 2rem;
-  background: url(images/bird.svg) no-repeat;
+  background: url(images/high-five-logo.svg) no-repeat;
   background-size: contain;
   font-size: 1.5rem;
+}
+
+.masthead .logo a {
+  padding-left: 0.7rem;
 }
 
 .masthead .social {
