--- a/partials/email_subscribe.html
+++ b/partials/email_subscribe.html
@@ -1,26 +1,19 @@
-<section class="newsletter section section-padding section-seperator-above row">
-  <div class="row-item newsletter-cta">
-    <h2 class="section-primary">Stay up-to-date with our kits and workshops</h2>
-    <p class="section-secondary">And get a free "IoT for Developers" ebook</p>
-  </div>
-  <div class="row-item newsletter-action">
-    <!-- Begin MailChimp Signup Form -->
-    <div id="mc_embed_signup">
-      <form action="//cardboardiot.us12.list-manage.com/subscribe/post?u=159612a3b62d933335a53ba02&amp;id=2da7d3d461" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll">
-          <div class="action mc-field-group">
-            <label class="visually-hidden" for="mce-EMAIL">Email address</label>
-            <input class="action-input" type="email" value="" name="EMAIL" class="required email" placeholder="Email Address" id="mce-EMAIL">
-            <input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button action-primary">
-          </div>
-          <div id="mce-responses" class="clear">
-            <div class="response" id="mce-error-response" style="display:none"></div>
-            <div class="response" id="mce-success-response" style="display:none"></div>
-          </div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;"><input type="text" name="b_159612a3b62d933335a53ba02_2da7d3d461" tabindex="-1" value=""></div>
+<div class="row-item newsletter-action">
+  <!-- Begin MailChimp Signup Form -->
+  <div id="mc_embed_signup">
+    <form action="//cardboardiot.us12.list-manage.com/subscribe/post?u=159612a3b62d933335a53ba02&amp;id=2da7d3d461" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+      <div id="mc_embed_signup_scroll">
+        <div class="action mc-field-group">
+          <label class="visually-hidden" for="mce-EMAIL">Email address</label>
+          <input class="action-input" type="email" value="" name="EMAIL" class="required email" placeholder="Email Address" id="mce-EMAIL">
+          <input type="submit" value="Sign up for updates" name="subscribe" id="mc-embedded-subscribe" class="button action-primary">
         </div>
-      </form>
-    </div>
-    <!--End mc_embed_signup-->
+        <div id="mce-responses" class="clear">
+          <div class="response" id="mce-error-response" style="display:none"></div>
+          <div class="response" id="mce-success-response" style="display:none"></div>
+        </div><!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+        <div style="position: absolute; left: -5000px;"><input type="text" name="b_159612a3b62d933335a53ba02_2da7d3d461" tabindex="-1" value=""></div>
+      </div>
+    </form>
   </div>
-</section>
+  <!--End mc_embed_signup-->
