--- a/partials/hero.html
+++ b/partials/hero.html
@@ -1,3 +1,8 @@
-<section class="section hero row">
-  <h1 class="section-item hero-hd row-item">Learn & Make Smart Things out of cardboard</h1>
+<section class="section hero col">
+  <h1 class="section-item hero-hd">
+    Smart product kits you can DIY in a weekend
+  </h1>
+  <p class="hero-sub">Code it in javascript</p>
+  <p>Coming soon</p>
+  {{> email_subscribe }}
 </section>
