--- a/static/site.css
+++ b/static/site.css
@@ -524,6 +524,56 @@ html {
 
   /*outline: 1px solid blue;*/
 }
+
+
+.col {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+
+  display: -webkit-box;
+
+  display: -webkit-flex;
+
+  display: -ms-flexbox;
+
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  -webkit-box-pack: center;
+  -webkit-justify-content: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-align-content: center;
+      -ms-flex-line-pack: center;
+          align-content: center;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+
+  /*outline: 1px solid red;*/
+}
+
+.col-item {
+  -webkit-box-ordinal-group: 1;
+  -webkit-order: 0;
+      -ms-flex-order: 0;
+          order: 0;
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  /*align-self: center;*/
+
+  /*outline: 1px solid blue;*/
+}
 .section {
   overflow: auto;
 }
@@ -545,7 +595,11 @@ html {
 }
 
 .section-seperator-above {
-  border-top: 2px solid rgba(74, 74, 74, 0.2);
+  border-top: 1px solid rgba(74, 74, 74, 0.2);
+}
+
+.section-seperator-above-dark {
+  border-top: 1px solid rgba(74, 74, 74, 0.6);
 }
 
 .section-primary,
@@ -615,12 +669,13 @@ html {
 
 .action-primary {
   border: rgba(74, 74, 74, 1);
-  color: rgba(74, 74, 74, 1);
-  background-color: rgba(255,241,118,1);
+  color: rgba(255,241,118,1);
+  background-color: rgba(74, 74, 74, 1);
 }
 
 .action-primary:hover {
-  background-color: rgba(250,232,72,1);
+  background-color: rgba(54, 54, 54, 1);
+  color: rgba(250,232,72,1);
 }
 .media {
   /*height: 416px;
@@ -657,9 +712,13 @@ html {
 .masthead .logo {
   margin-left: 2rem;
   padding-left: 2rem;
-  background: url(images/bird.svg) no-repeat;
+  background: url(images/high-five-logo.svg) no-repeat;
   background-size: contain;
   font-size: 1.5rem;
+}
+
+.masthead .logo a {
+  padding-left: 0.7rem;
 }
 
 .masthead .social {
@@ -689,16 +748,26 @@ html {
 .hero {
   padding-top: 60px;
   min-height: 380px;
-  color: #fff;
-  background: rgba(255,241,118,1) url(images/hero.jpg) no-repeat;
+  color: rgba(74, 74, 74, 1);
+  background: rgba(255,241,118,1);
   background-size: cover;
 }
 
 .hero-hd {
-  max-width: 578px;
+  max-width: 558px;
+  margin-bottom: 1rem;
   text-align: center;
   font-weight: normal;
   font-size: 40px;
+}
+
+.hero-sub {
+  margin-top: 0;
+  font-size: 24px;
+}
+
+.hero > * {
+  display: block;
 }
 article {
   padding: 0 2rem;
@@ -762,7 +831,11 @@ article {
 
 .explainer-item .image {
   margin-bottom: 20px;
-  max-height: 60px;
+  min-height: 143px;
+}
+
+.explainer-item .image img {
+  width: 100%;
 }
 .newsletter {
 
