--- a/css/main.css
+++ b/css/main.css
@@ -20,4 +20,4 @@
 @import 'modules/credits.css';
 @import 'modules/footer.css';
 @import 'modules/demo-workshop.css';
-@import 'modules/why.css';
+@import 'modules/whys.css';
