--- a/partials/explainer.html
+++ b/partials/explainer.html
@@ -1,4 +1,4 @@
-<section class="explainer section">
+<section class="explainer section section-padding">
     <ul class="row">
       <li class="row-item explainer-item">
         <div class="image">
