--- a/css/modules/explainer.css
+++ b/css/modules/explainer.css
@@ -25,8 +25,10 @@
 .explainer-item .image {
   margin-bottom: 20px;
   min-height: 143px;
+  line-height: 143px;
 }
 
 .explainer-item .image img {
   width: 100%;
+  vertical-align: middle;
 }
