--- a/static/site.css
+++ b/static/site.css
@@ -677,6 +677,16 @@ html {
   background-color: rgba(54, 54, 54, 1);
   color: rgba(250,232,72,1);
 }
+
+a.action-primary {
+  padding: 1rem 2rem !important;
+}
+
+a.action-primary,
+a.action-primary:hover {
+  text-decoration: none;
+  color: #fff;
+}
 .media {
   /*height: 416px;
   width: 234px;*/
@@ -832,10 +842,12 @@ article {
 .explainer-item .image {
   margin-bottom: 20px;
   min-height: 143px;
+  line-height: 143px;
 }
 
 .explainer-item .image img {
   width: 100%;
+  vertical-align: middle;
 }
 .newsletter {
 
@@ -905,8 +917,43 @@ article {
   line-height: 1.7;
 }
 
+.kit,
 .workshop {
   text-align: center;
+}
+
+.kit-wrapper {
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-flex-wrap: nowrap;
+      -ms-flex-wrap: nowrap;
+          flex-wrap: nowrap;
+  /*justify-content: center;*/
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-align-content: stretch;
+      -ms-flex-line-pack: stretch;
+          align-content: stretch;
+  -webkit-box-align: center;
+  -webkit-align-items: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.kit > * {
+  -webkit-box-flex: 1;
+  -webkit-flex: 1 1 auto;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
 }
 
 .why .section-primary,
@@ -932,10 +979,25 @@ article {
 }
 
 .kit-primary-image {
-  width: 50%;
-  float: right;
+  width: 30%;
+  padding: 1rem;
+}
+
+.kit-first {
+  -webkit-box-ordinal-group: 0;
+  -webkit-order: -1;
+      -ms-flex-order: -1;
+          order: -1;
+}
+
+.kit-first,
+.kit-second {
+  -webkit-flex-basis: 25%;
+      -ms-flex-preferred-size: 25%;
+          flex-basis: 25%;
 }
 
 .workshop-primary-image {
+  padding-top: 2rem;
   height: 100px;
 }
