--- a/static/site.css
+++ b/static/site.css
@@ -816,9 +816,8 @@ article {
 .explainer {
   min-height: 294px;
 
-  background-image: -webkit-linear-gradient(225deg, #FDED63 0%, #FFF176 100%);
-
-  background-image: linear-gradient(-135deg, #FDED63 0%, #FFF176 100%);
+  /*background-image: linear-gradient(-135deg, #FDED63 0%, #FFF176 100%);*/
+  background: rgba(255,241,118,1);
 }
 
 .explainer > * {
