--- a/partials/explainer.html
+++ b/partials/explainer.html
@@ -15,8 +15,8 @@
         <p>Includes all the bits. Hack guided challenges with help to ensure you succeed.</p>
       </li>
       <li class="row-item explainer-item">
-        <div class="image">
-          <img src="images/os-logos.svg" />
+        <div class="image image-heart">
+          <img src="images/explainer-icon-heart.svg" />
         </div>
         <h3>Open</h3>
         <p>100% open source. Buy the kits or get going with our workshoppers &amp; schematics.</p>
