--- a/static/site.css
+++ b/static/site.css
@@ -1007,8 +1007,8 @@ article {
   text-align: center;
 }
 
-.explainer-item:first-child {
-  /*margin-right: 85px;*/
+.explainer-item .image-heart {
+  width: 50%;
 }
 
 .explainer-item:last-child {
@@ -1016,7 +1016,7 @@ article {
 }
 
 .explainer-item .image {
-  margin-bottom: 20px;
+  margin: 20px auto;
   min-height: 143px;
   line-height: 143px;
 }
