--- a/templates/index.html
+++ b/templates/index.html
@@ -34,6 +34,7 @@
     <aside class="credits section">
       <h2>Icons by the <a href="">Noun Project</a></h2>
       <ul>
+        <li><a href="https://thenounproject.com/term/heart/96615/">Heart by Lloyd Humphreys</a></li>
         <li><a href="https://thenounproject.com/term/high-five/102498/">high five by Justin Alexander</a></li>
         <li><a href="https://thenounproject.com/term/led-bulb/166623/">Led Bulb By DANT, IT</a></li>
         <li><a href="https://thenounproject.com/term/cut/130881/">Cut By Aaron K. Kim, US</a></li>
